--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -1,28 +1,45 @@
+
+
 .greetSec{
     display: flex;
     justify-content: left;
-    align-items: center;
+    align-items: flex-end;
     height: 60vh;
-    width: auto;
-    background-color: aliceblue;
+    width: 100%;
+    /* background-image: url('/Volumes/Drive E/The Therapy Tree/3t_public/public/savbg.jpeg'); */
+    background-image: linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0.5)), url('../../public/savbg.jpeg');
+    background-position: center center;
+    background-size: cover;
+    
 }
 
 .greet{
-    height: 10vh;
-    width: 15vw;
-    margin-left: 5vw;
-    font-size: 2.5vh;
+    height: auto;
+    max-width: auto;
+    margin-left: 3vw;
+    font-size: 6vh;
+    font-weight: 800;
+    /* background-color: rgba(255, 255, 255, 0.5); */
+    /* color: rgba(0, 0, 0, 0.6); */
+    color:rgba(0, 0, 0, 0.5);
+    /* color: transparent; */
+    /* background-image: linear-gradient( rgba(0, 150, 0), rgba(150, 0, 0), rgba(0, 0, 0, 0.7));
+    background-clip: text;
+    -webkit-background-clip: text; */
+    /* border: 1px solid rgba(0, 0, 0, 0.6);
+    border-radius: 10px; */
 }
 
 .offerings{
     min-height: 25vh;
-    width: auto;
+    max-width: 100vw;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
     padding: 2vh;
     background-color:azure;
-    flex-wrap: wrap;
+
 }
 
 .offering{
@@ -33,16 +50,18 @@
     padding: 2vh;
     row-gap: 1vh;
     height: 8vh;
+    /* aspect-ratio: 1.5; */
     min-width: 8vw;
-    width: 8vw;
+    /* max-width: 8vw; */
     font-size: 2.25vh;
     text-wrap: wrap;
+    margin: 3vmin;
 }
 
 .actionSec{
     display: flex;
-    height: 10vh;
-    width: auto;
+    height: max(10vh, 120px);
+    width: 100%;
     justify-content: center;
     align-items: center;
     padding: 2vmin;
@@ -51,6 +70,7 @@
     button{
         min-width: 10vw;
         height: 4vh;
+        aspect-ratio: 3;
         border-radius: 2vmin;
         background-color: aquamarine;
         display: flex;
@@ -58,6 +78,7 @@
         align-items: center;
         column-gap: 0.5vw;
         border: none;
+        margin-right: 5vmin;
     }
 }
 
@@ -66,7 +87,7 @@
     justify-content: space-evenly;
     align-items: center;
     min-height: 50vh;
-    width: auto;
+    width: 100%;
     /* background-color: aqua; */
     flex-wrap: wrap;
 }
@@ -113,7 +134,7 @@
 
     button{
         height: 5vh;
-        width: 15vw;
+        aspect-ratio: 3;
         background-color: aquamarine;
         display: flex;
         align-items: center;
@@ -172,6 +193,7 @@
     width: 100%;
     height: 100%;
     margin: 2vmin;
+    font-size: 2vh;
 }
 
 .dataOpt{
@@ -180,5 +202,88 @@
     align-items: center;
     justify-content: center;
     min-width: 15vw;
+    width: 15vw;
     column-gap: 3vw;
+}
+
+.dataVal1{
+    font-size: 5vh;
+}
+
+.dataVal2{
+    font-size: 4vh;
+}
+
+.dataVal3{
+    font-size: 2vh;
+}
+
+.locTitle{
+    font-size: 2.5vh;
+    font-weight: 525;
+}
+
+.serv{
+    width: 20vw;
+        height: 4vh;
+        border-radius: 5px;
+        padding: 0 0 0 1vmin;
+        border: none;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+@media screen and (max-width : 430px) {
+    .greetSec{
+        height: 45vh;
+        width: 100%;
+        background-color: aliceblue;
+    }
+
+    .greet{
+        width: auto;
+        font-size: 15px;
+        margin-bottom: 11vh;
+        color: black;
+    }
+
+    .dataVal1{
+        font-size: 24px;
+    }
+
+    .dataVal2{
+        font-size: 16px;
+    }
+
+    .dataVal3{
+        font-size: 13px;
+    }
+
+    .dataSec{
+        font-size: 12px;
+    }
+
+    .expSec{
+        height: 20vh;
+        margin-bottom: 2vh;
+    }
+
+    .locSecCol{
+        font-size: 14px;
+    }
+
+    .locTitle{
+        font-size: 16px;
+    }
+
+    .fsForm{
+        input{
+            width: 40vw;
+            background-color: white;
+        }
+    }
+
+    .serv{
+        width: 41vw;
+            background-color: white;
+    }
 }
