--- a/src/Styles/Staff.css
+++ b/src/Styles/Staff.css
@@ -1,13 +1,14 @@
-.MainContentContainer{
+.MainContentContainerMd{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 10vh 5vw 5vh 5vw ;
+    padding: 10vh 1vw 5vh 1vw ;
     text-align: justify;
     text-justify: inter-word;
     line-height: max(4vmin, 24px);
     min-height: 68vh;
+    margin: 2vh 4vw;
 }
 
 .staffMem{
@@ -32,6 +33,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url('../../public/Indu_3t.jpeg');
+    /* background-image: linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0.5)), url('../../public/3t_hero.png'); */
+    background-position: center 20%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    box-shadow: 0 0 10px 3px rgba(130, 255, 161, 0.5);
 }
 
 .smDet{
@@ -60,8 +67,4 @@
         font-size: 14px;
         line-height: 18px;
     }
-}
-
-@media  screen and (min-width : 435px) {
-    
 }
